modified structure of image slider / fixed cropper problem with image pixel area calculation

--- a/src/components/image-slider/image-slider.module.scss
+++ b/src/components/image-slider/image-slider.module.scss
@@ -1,3 +1,19 @@
+.container {
+  opacity: 0;
+  animation: fade-in 0.7s ease-in forwards;
+
+  @keyframes fade-in {
+    from {
+      filter: blur(10px);
+    }
+
+    to {
+      opacity: 1;
+      filter: blur(0);
+    }
+  }
+}
+
 .imageSlider {
   position: relative;
 
@@ -8,10 +24,10 @@
   width: 100%;
   height: 100%;
 
-  transition: translate 300ms ease-in-out;
+  transition: translate 0.5s ease-in-out;
 
   & [data-testid='cropper'] {
-    transition: 0.6s all ease-in-out;
+    transition: 0.8s all ease-in-out;
   }
 }
 
